--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,6 +91,36 @@
 }
 .sobre-mi{
     background-color: #051129;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 1.5rem;
+}
+.sobre-mi-img img{
+    padding-left: 10%;
+    max-width: 700px;
+    height: auto;
+    width: 100%;
+}
+.container-sobre-mi h2{
+    color: #0ef;
+    font-size: 60px;
+    padding-top: 10%;
+}
+.container-sobre-mi h4{
+    font-size: 29px;
+    font-weight: 600;
+    color: #fff;
+    line-height: 1.7;
+    margin: 15px 0 30px;
+}
+.container-sobre-mi p{
+    color: aliceblue;
+    font-size: 20px;
+    line-height: 1.4;
+    padding-right: 10%;
+    padding-bottom: 10%;
+    margin-bottom: 4rem;
 }
 .habilidades{
     background-color: #fff;
