--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,6 +125,163 @@
 .habilidades{
     background-color: #fff;
 }
+.habilidades{
+    background-color: #fff;
+    color:#051129;
+    padding: 50px 20px;
+}
+.habilidades .container-habilidades{
+    max-width: 1100px;
+    margin: auto;
+}
+.habilidades h2{
+    color: #0ef;
+    font-size: 48px;
+    text-align: left;
+    padding: 20px 0;
+
+}
+.habilidades .fila{
+    display: flex;
+}
+.skills .fila .col{
+    width: 50%;
+    padding: 0 20px;
+}
+.skills .fila .col h3{
+    font-size: 28px;
+    margin-bottom: 25px;
+}
+.habilidades .skill > span{
+    font-weight: bold;
+    display: block;
+    margin-bottom: 10px;
+}
+.habilidades .skill .barra-skill{
+    height: 8px;
+    width: 80%;
+    background-color: #131517;
+    position: relative;
+    margin-bottom: 30px;
+}
+.habilidades .skill .progreso{
+    background-color:#0ef;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 8px;
+}
+.habilidades .skill .barra-skill span{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color:#0ef;
+    border-radius: 50px;
+    line-height: 40px;
+    text-align: center;
+    top: -17px;
+    right: -15px;
+    font-size: 14px;
+}
+/* Estas clases se agregaran dinamicamente mediante javascript */
+.habilidades .skill .javascript{
+    width: 0%;
+    animation: 2s javascript forwards;
+}
+@keyframes javascript {
+    0%{width: 0%;}
+    100%{width: 40%;}
+}
+
+.habilidades .skill .htmlcss{
+    width: 0%;
+    animation: 2s htmlcss forwards;
+}
+@keyframes htmlcss {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+
+.habilidades .skill .python{
+    width: 0%;
+    animation: 2s python forwards;
+}
+@keyframes python {
+    0%{width: 0%;}
+    100%{width: 50%;}
+}
+
+.habilidades .skill .sql{
+    width: 0%;
+    animation: 2s sql forwards;
+}
+@keyframes sql {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+
+.habilidades .skill .powerbi{
+    width: 0%;
+    animation: 2s powerbi forwards;
+}
+@keyframes powerbi {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+
+.habilidades .skill .laravel{
+    width: 0%;
+    animation: 2s laravel forwards;
+}
+@keyframes laravel {
+    0%{width: 0%;}
+    100%{width: 40%;}
+}
+
+.habilidades .skill .comunicacion{
+    width: 0%;
+    animation: 2s comunicacion forwards;
+}
+@keyframes comunicacion {
+    0%{width: 0%;}
+    100%{width: 60%;}
+}
+
+.habilidades .skill .trabajo{
+    width: 0%;
+    animation: 2s trabajo forwards;
+}
+@keyframes trabajo {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+
+.habilidades .skill .creatividad{
+    width: 0%;
+    animation: 2s creatividad forwards;
+}
+@keyframes creatividad {
+    0%{width: 0%;}
+    100%{width: 60%;}
+}
+
+.habilidades .skill .dedicacion{
+    width: 0%;
+    animation: 2s dedicacion forwards;
+}
+@keyframes dedicacion {
+    0%{width: 0%;}
+    100%{width: 80%;}
+}
+
+.habilidades .skill .proyect{
+    width: 0%;
+    animation: 2s proyect forwards;
+}
+@keyframes proyect {
+    0%{width: 0%;}
+    100%{width: 80%;}
+}
 .proyectos{
     background-color: #051129;
 }
