--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -284,6 +284,16 @@
 }
 .proyectos{
     background-color: #051129;
+    padding: 4%;
+}
+.proyectos h1{
+    color: #0ef;
+    text-align: center;
+    padding-bottom: 3%;
+    font-size: 60px;
+}
+.card-img-top{
+    height: 250px;
 }
 .contacto{
     background-color: #fff;
